@@ -102,7 +102,10 @@ xnestPixmapToRegion(PixmapPtr pPixmap)
   
   pReg = REGION_CREATE(pPixmap->drawable.pScreen, NULL, 1);
   pTmpReg = REGION_CREATE(pPixmap->drawable.pScreen, NULL, 1);
-  if(!pReg || !pTmpReg) return NullRegion;
+  if(!pReg || !pTmpReg) {
+      XDestroyImage(ximage);
+      return NullRegion;
+  }
   
   for (y = 0; y < pPixmap->drawable.height; y++) {
     Box.y1 = y;
